--- a/JS_Study/Ellie's_coding/test.html
+++ b/JS_Study/Ellie's_coding/test.html
@@ -7,7 +7,10 @@
     <!-- <script src="variable.js"></script> -->
     <!-- <script src="operator.js"></script> -->
     <!-- <script src="function.js"></script> -->
-    <script src="class.js"></script>
+    <!-- <script src="class.js"></script> -->
+    <!-- <script src="object.js"></script> -->
+    <!-- <script src="array.js"></script> -->
+    <script src="array-api.js"></script>
 </head>
 <body>
     
